# py-aiohttp-api-client

./: README.md  pyproject.toml
aiohttp_api_client/: __init__.py  json_api.py
tests/: test_json_api.py
